Fix z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@ body {
   position: fixed;
   box-shadow: 0 4px 12px rgba(158, 158, 158, 0.4);
 
-  z-index: 1;
+  z-index: 1001;
   top: 0;
   left: 0;
   overflow-x: hidden;
